# open-notes-format

./: .gitignore  CONTRIBUTING.md  README.md  SPECIFICATION.md  THIRD_PARTY_LICENSE.md
reference/cpp/: CMakeLists.txt  README.md  main.cpp
reference/cpp/src/: onf_reader.cpp  onf_reader.h  onf_types.h  onf_writer.cpp  onf_writer.h
